rust/psibase_macros/psibase-macros-derive/tests/authorized/numeric_trust_level.stderr
error: invalid trust level in `my_fn`: expected one of None, Low, Medium, High, Max
 --> tests/authorized/numeric_trust_level.rs:6:5
  |
6 |     #[authorized(42)]
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `authorized` (in Nightly builds, run with -Z macro-backtrace for more info)
